fixes integration test for appy pay