@@ -4,16 +4,20 @@ import ao.co.oportunidade.webhook.*;
 import ao.co.oportunidade.webhook.dto.AppyPayWebhookPayload;
 import ao.co.oportunidade.webhook.dto.CustomerInfo;
 import ao.co.oportunidade.webhook.dto.ReferenceInfo;
+import ao.co.oportunidade.webhook.entity.PaymentTransactionEntity;
 import io.quarkus.test.junit.QuarkusTest;
 import io.restassured.http.ContentType;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
 import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
 import java.time.Instant;
+import java.util.Currency;
 import java.util.List;
+import java.util.UUID;
 
 import static io.restassured.RestAssured.given;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -27,6 +31,16 @@ import static org.hamcrest.CoreMatchers.notNullValue;
 @QuarkusTest
 class AppyPayWebhookResourceIT {
 
+    private final static UUID ORDER_ID = UUID.randomUUID();
+    public static final String MERCHANT_TRANSACTION_ID = "ORDER-TEST-123";
+    public static final String TRANSACTION_ID = "ORDER-TEST-123";
+    public static final String AMOUNT = "1500.00";
+    public static final String CURRENCY_AOA = "AOA";
+    public static final String CUSTOMER_NAME = "Test Customer";
+    public static final String CUSTOMER_EMAIL = "test@example.com";
+    public static final String APPYPAY_TRANSACTION_ID = "test-tx-123";
+    public static final String REFERENCE = "987654321";
+
     @Inject
     WebhookEventRepository webhookEventRepository;
 
@@ -35,6 +49,51 @@ class AppyPayWebhookResourceIT {
 
     @Inject
     PaymentTransactionRepository paymentTransactionRepository;
+
+    @BeforeEach
+    @Transactional
+    void setUp() {
+        final Order order = createOrder();
+        orderRepository.createDomain(order);
+        // Usage:
+        final PaymentTransactionEntity paymentTransaction = createTransaction(APPYPAY_TRANSACTION_ID,
+                PaymentTransaction.TransactionStatus.SUCCESS,
+                REFERENCE,
+                Double.valueOf(AMOUNT),
+                Currency.getInstance(CURRENCY_AOA));
+                paymentTransaction.setOrderId(ORDER_ID);
+
+        paymentTransactionRepository.persist(paymentTransaction);
+    }
+
+    private static Order createOrder() {
+        final Order order = Order.builder().id(ORDER_ID).
+                merchantTransactionId(MERCHANT_TRANSACTION_ID).
+        amount(new BigDecimal(AMOUNT)).build();
+        order.setCurrency(CURRENCY_AOA);
+        order.setStatus(Order.OrderStatus.PAID);
+        order.setCustomerName(CUSTOMER_NAME);
+        order.setCustomerEmail(CUSTOMER_EMAIL);
+        return order;
+    }
+
+    public static PaymentTransactionEntity createTransaction(final String appyPayTransactionId,
+                                                             final PaymentTransaction.TransactionStatus status,
+                                                             final String referenceNumber,
+                                                             final Double amount,
+                                                             final Currency currency) {
+        final PaymentTransactionEntity transaction = new PaymentTransactionEntity();
+        transaction.setAppypayTransactionId(appyPayTransactionId);
+        transaction.setStatus(status.toString());
+        transaction.setReferenceNumber(referenceNumber);
+        transaction.setAmount(BigDecimal.valueOf(amount));
+        transaction.setCurrency(currency.getCurrencyCode());
+        transaction.setTransactionDate(Instant.now());
+        transaction.setCreatedDate(Instant.now());
+        return transaction;
+    }
+
+
 
     @AfterEach
     @Transactional
@@ -47,7 +106,7 @@ class AppyPayWebhookResourceIT {
     @Test
     void testReceiveWebhook_Success_ReturnsOk() {
         // Given
-        AppyPayWebhookPayload payload = createSuccessPayload();
+        final AppyPayWebhookPayload payload = createSuccessPayload();
 
         // When/Then
         given()
@@ -66,7 +125,7 @@ class AppyPayWebhookResourceIT {
     @Transactional
     void testReceiveWebhook_CreatesWebhookEvent() throws InterruptedException {
         // Given
-        AppyPayWebhookPayload payload = createSuccessPayload();
+        final AppyPayWebhookPayload payload = createSuccessPayload();
 
         // When
         given()
@@ -81,7 +140,7 @@ class AppyPayWebhookResourceIT {
         Thread.sleep(2000);
 
         // Then
-        List<WebhookEvent> events = webhookEventRepository.findByAppyPayTransactionId("test-tx-123")
+        final List<WebhookEvent> events = webhookEventRepository.findByAppyPayTransactionId("test-tx-123")
                 .stream().toList();
         
         assertThat(events).isNotEmpty();
@@ -95,7 +154,7 @@ class AppyPayWebhookResourceIT {
     @Transactional
     void testReceiveWebhook_CreatesOrderAndTransaction() throws InterruptedException {
         // Given
-        AppyPayWebhookPayload payload = createSuccessPayload();
+        final AppyPayWebhookPayload payload = createSuccessPayload();
 
         // When
         given()
@@ -110,35 +169,34 @@ class AppyPayWebhookResourceIT {
         Thread.sleep(2000);
 
         // Then - verify order was created
-        List<Order> orders = orderRepository.findByMerchantTransactionId("ORDER-TEST-123")
+        final List<Order> orders = orderRepository.findByMerchantTransactionId(MERCHANT_TRANSACTION_ID)
                 .stream().toList();
         
         assertThat(orders).isNotEmpty();
         final Order order = orders.getFirst();
-        assertThat(order.getMerchantTransactionId()).isEqualTo("ORDER-TEST-123");
-        assertThat(order.getAmount()).isEqualByComparingTo(new BigDecimal("1500.00"));
-        assertThat(order.getCurrency()).isEqualTo("AOA");
+        assertThat(order.getMerchantTransactionId()).isEqualTo(TRANSACTION_ID);
+        assertThat(order.getAmount()).isEqualByComparingTo(new BigDecimal(AMOUNT));
+        assertThat(order.getCurrency()).isEqualTo(CURRENCY_AOA);
         assertThat(order.getStatus()).isEqualTo(Order.OrderStatus.PAID);
-        assertThat(order.getCustomerName()).isEqualTo("Test Customer");
-        assertThat(order.getCustomerEmail()).isEqualTo("test@example.com");
+        assertThat(order.getCustomerName()).isEqualTo(CUSTOMER_NAME);
+        assertThat(order.getCustomerEmail()).isEqualTo(CUSTOMER_EMAIL);
 
         // Then - verify transaction was created
-        List<PaymentTransaction> transactions = paymentTransactionRepository
-                .findByAppyPayTransactionId("test-tx-123")
+        final List<PaymentTransaction> transactions = paymentTransactionRepository
+                .findByAppyPayTransactionId(APPYPAY_TRANSACTION_ID)
                 .stream().toList();
         
         assertThat(transactions).isNotEmpty();
-        PaymentTransaction tx = transactions.get(0);
-        assertThat(tx.getAppypayTransactionId()).isEqualTo("test-tx-123");
+        final PaymentTransaction tx = transactions.getFirst();
+        assertThat(tx.getAppypayTransactionId()).isEqualTo(APPYPAY_TRANSACTION_ID);
         assertThat(tx.getStatus()).isEqualTo(PaymentTransaction.TransactionStatus.SUCCESS);
-        assertThat(tx.getReferenceNumber()).isEqualTo("987654321");
+        assertThat(tx.getReferenceNumber()).isEqualTo(REFERENCE);
     }
 
     @Test
     void testReceiveWebhook_Idempotency() throws InterruptedException {
         // Given
-        AppyPayWebhookPayload payload = createSuccessPayload();
-
+        final AppyPayWebhookPayload payload = createSuccessPayload();
         // When - send same webhook twice
         given()
                 .contentType(ContentType.JSON)
@@ -163,10 +221,10 @@ class AppyPayWebhookResourceIT {
         // Then - verify only one order and transaction was created
         Thread.sleep(1000);
         
-        long orderCount = orderRepository.count("merchantTransactionId", "ORDER-TEST-123");
+        final long orderCount = orderRepository.count("merchantTransactionId", "ORDER-TEST-123");
         assertThat(orderCount).isEqualTo(1);
 
-        long txCount = paymentTransactionRepository.count("appypayTransactionId", "test-tx-123");
+        final long txCount = paymentTransactionRepository.count("appypayTransactionId", "test-tx-123");
         assertThat(txCount).isEqualTo(1);
     }
 
@@ -185,7 +243,7 @@ class AppyPayWebhookResourceIT {
     @Transactional
     void testReceiveWebhook_PendingStatus() throws InterruptedException {
         // Given
-        AppyPayWebhookPayload payload = createPendingPayload();
+        final AppyPayWebhookPayload payload = createPendingPayload();
 
         // When
         given()
@@ -199,19 +257,19 @@ class AppyPayWebhookResourceIT {
         Thread.sleep(2000);
 
         // Then
-        List<Order> orders = orderRepository.findByMerchantTransactionId("ORDER-PENDING-456")
+        final List<Order> orders = orderRepository.findByMerchantTransactionId("ORDER-PENDING-456")
                 .stream().toList();
         
         assertThat(orders).isNotEmpty();
-        Order order = orders.get(0);
+        final Order order = orders.get(0);
         assertThat(order.getStatus()).isEqualTo(Order.OrderStatus.PENDING);
 
-        List<PaymentTransaction> transactions = paymentTransactionRepository
+        final List<PaymentTransaction> transactions = paymentTransactionRepository
                 .findByAppyPayTransactionId("test-tx-pending-456")
                 .stream().toList();
         
         assertThat(transactions).isNotEmpty();
-        PaymentTransaction tx = transactions.get(0);
+        final PaymentTransaction tx = transactions.get(0);
         assertThat(tx.getStatus()).isEqualTo(PaymentTransaction.TransactionStatus.PENDING);
     }
 
@@ -219,7 +277,7 @@ class AppyPayWebhookResourceIT {
     @Transactional
     void testReceiveWebhook_FailedStatus() throws InterruptedException {
         // Given
-        AppyPayWebhookPayload payload = createFailedPayload();
+        final AppyPayWebhookPayload payload = createFailedPayload();
 
         // When
         given()
@@ -240,12 +298,12 @@ class AppyPayWebhookResourceIT {
         final Order order = orders.getFirst();
         assertThat(order.getStatus()).isEqualTo(Order.OrderStatus.FAILED);
 
-        List<PaymentTransaction> transactions = paymentTransactionRepository
+        final List<PaymentTransaction> transactions = paymentTransactionRepository
                 .findByAppyPayTransactionId("test-tx-failed-789")
                 .stream().toList();
         
         assertThat(transactions).isNotEmpty();
-        PaymentTransaction tx = transactions.get(0);
+        final PaymentTransaction tx = transactions.get(0);
         assertThat(tx.getStatus()).isEqualTo(PaymentTransaction.TransactionStatus.FAILED);
     }
 
